finish registration and login starting athentication

--- a/index1.html
+++ b/index1.html
@@ -55,6 +55,7 @@
 	<script src="bower_components/angular-ui-router-breadcrumbs/dist/angular-ui-router-breadcrumbs.min.js"></script>
 	<script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
 
+
 	<script src="app/app.js"></script>
 	<script src="app/Shared/Modules.js"></script>
 	
@@ -67,6 +68,8 @@
     <script src="app/User/UserFactory.js"></script>
     <script src="app/User/UserController.js"></script>
     <script src="app/User/UserDirective.js"></script>
+    <script src="app/User/UserCompareDerective.js"></script>
+    <script src="app/User/UserAuthFactory.js"></script>
 
 	<script src="app/Genre/GenreFactory.js"></script>
 	<script src="app/Genre/GenreDirective.js"></script>
