--- a/index1.html
+++ b/index1.html
@@ -49,12 +49,12 @@
 	<script src="bower_components/angular-animate/angular-animate.js"></script>
 	<script src="bower_components/angular-route/angular-route.min.js"></script>
 	<script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
-	<script src="bower_components/angular/angular.validator.js"></script>
+	<!-- <script src="bower_components/angular/angular.validator.js"></script>-->
     <script src="bower_components/ng-breadcrumbs.min.js"></script>
 	<script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 	<script src="bower_components/angular-ui-router-breadcrumbs/dist/angular-ui-router-breadcrumbs.min.js"></script>
 	<script src="bower_components/angular-local-storage/dist/angular-local-storage.min.js"></script>
-
+    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
 
 	<script src="app/app.js"></script>
 	<script src="app/Shared/Modules.js"></script>
@@ -66,10 +66,13 @@
 	<script src="app/Search/SearchController.js"></script>
 
     <script src="app/User/UserFactory.js"></script>
+    <script src="app/User/UserAuthFactory.js"></script>
+    <script src="app/User/UserSessionService.js"></script>
     <script src="app/User/UserController.js"></script>
     <script src="app/User/UserDirective.js"></script>
     <script src="app/User/UserCompareDerective.js"></script>
-    <script src="app/User/UserAuthFactory.js"></script>
+
+
 
 	<script src="app/Genre/GenreFactory.js"></script>
 	<script src="app/Genre/GenreDirective.js"></script>
