--- a/app/Albums/_home.html
+++ b/app/Albums/_home.html
@@ -8,7 +8,7 @@
 	    {{loadCount()}}
 		<div id ="center-albums">
 			<div class="center albums" class="ng-trans ng-trans-flip-y" ng-repeat="album in albums | limitTo :12 :11 track by $index" >
-				<a ng-href="#/album{{album.album_id}}"><img ng-src="Images/{{album.image_path}}"  alt=""></a> 			
+				<a ui-sref="#/album{{album.album_id}}"><img ng-src="Images/{{album.image_path}}"  alt=""></a> 			
 				<div class="info-head">
 				    <p class="head-name">{{album.album_name}}</p>
 					<p class="album-price">{{album.album_price | currency:"$"}}</p>
@@ -22,7 +22,7 @@
 		
 		<div id ="left-albums">
 			<div class= "left albums" ng-repeat="album in albums | limitTo :2 :10 track by $index "  >
-				<a ng-href="#/album{{album.album_id}}"><img ng-src="Images/{{album.image_path}}" alt=""></a> 
+				<a ui-sref="#/album{{album.album_id}}"><img ng-src="Images/{{album.image_path}}" alt=""></a> 
 				<div class="info-head">
 				    <p class="head-name">{{album.album_name}}</p>
 			    	<p class="album-price">{{album.album_price | currency:"$"}}</p>
@@ -39,7 +39,7 @@
 			<div ng-show='busy'>Loading data...</div>
 			<div id="page">
 			    <div class="page" ng-repeat="album in albums  track by $index" >
-					<a ng-href="#/album{{album.album_id}}"><img ng-src="Images/{{album.image_path}}" alt=""></a> 
+					<a ui-sref="#/album{{album.album_id}}"><img ng-src="Images/{{album.image_path}}" alt=""></a> 
 			        <div class="info-head">
 					    <p class="head-name">{{album.album_name}}</p>
 			            <p class="album-price">{{album.album_price | currency:"$"}}</p>
