--- a/app/Albums/_genre-albums.html
+++ b/app/Albums/_genre-albums.html
@@ -5,14 +5,13 @@
 		<genre-list> daniel </genre-list>
 		<my-cart></my-cart>
 		<div ncy-breadcrumb></div>
-	   <!--  <bread-crumb></bread-crumb> -->
 	   {{loadCount()}}
 		<div id="center-albums">
 			<div class="genre-amount">
 				<p>{{genreName }} ({{genreLength + " items"}})</p>
 			</div>
 			<div class="genre-albums" ng-repeat="album in albums track by $index">
-			    <a ng-href="#/album{{album.album_id}}"><img ng-src="Images/{{album.image_path}}" alt=""></a> 			
+			    <a ui-sref="genre.album({id:album.album_id})"><img ng-src="Images/{{album.image_path}}" alt=""></a> 			
 				<div class="info-manage-album">
 				    <p class="head-name">{{album.album_artist}} - {{album.album_name}}</p>
 					<p class="album-descriptoin">{{album.album_description | limitTo:100:0}}...</p>
