--- a/app/Albums/_home.html
+++ b/app/Albums/_home.html
@@ -12,36 +12,37 @@
 				    <p class="head-name">{{album.album_name}}</p>
 					<p class="album-price">{{album.album_price | currency:"$"}}</p>
 					<div class="album-manage-icon">
-			    		<img ng-src="Images/info-album.png" alt="" ng-click="setImage(img)">
-			    	    <img ng-src="Images/bascet-album.png" alt=""  ng-click="addToCart(album.album_id)">
+			    		<img ng-src="Images/info-album.png" alt="" ng-click="setInfo( album )" ng-class="{info:album.info}">
+			    	    <img ng-src="Images/bascet-album.png" alt="" ng-class="{ buy:album.buy }"  ng-click="addToCart( album )">
 			    	</div>
 			    </div>
 			</div>
 		</div>
 		
-	<!-- <div id="music-genre" ng-show="true" ng-controller="GenreController">
+	<div id="music-genre" ng-show="true" ng-controller="GenreController">
 		<div class="ng-trans ng-trans-flip-y" ng-repeat="genre in genres track by $index">
 			<a ui-sref="genreAlbums({id:genre.genre_id})">{{ genre.genre_name }}</a>
 	    </div>
-	</div> -->
-	
+	</div>	
 
 		<div id ="left-albums">
 			<div class= "left albums" ng-repeat="album in albums | limitTo :2 :10 track by $index "  >
 				<a ui-sref="album({id:album.album_id})"><img ng-src="Images/{{album.image_path}}" alt=""></a> 
 				<div class="info-head">
+				    <div class="info-content" ng-show="info"><p ng-bind="description"></p></div>
 				    <p class="head-name">{{album.album_name}}</p>
 			    	<p class="album-price">{{album.album_price | currency:"$"}}</p>
 					<div class="album-manage-icon" >
-			    		<img ng-src="Images/info-album.png" alt="info" ng-click="setImage(img)">
-			    	    <img ng-src="Images/bascet-album.png" alt="basket" ng-class="{ buy:buy }" ng-click="addToCart( album.album_id ) ">
+			    		<img ng-src="Images/info-album.png" alt="info" ng-click="setInfo( album )" ng-class="{info:album.info}">
+			    	    <img ng-src="Images/bascet-album.png" alt="basket" ng-class="{ buy:album.buy }" 
+			    	         ng-click="addToCart( album ) ">
 			    	</div>
 			    </div>
 			</div>
 			 
 		</div>
 
-		<div infinite-scroll="loadMore()" infinite-scroll-disabled='busy' infinite-scroll-distance='3'>
+		<div>
 			<div ng-show='busy'>Loading data...</div>
 			<div id="page">
 			    <div class="page" ng-repeat="album in albums  track by $index" >
@@ -51,11 +52,14 @@
 			            <p class="album-price">{{album.album_price | currency:"$"}}</p>
 						<div class="album-manage-icon">
 				    		<img ng-src="Images/info-album.png" alt="" ng-click="setImage(img)">
-				    	    <img ng-src="Images/bascet-album.png" alt=""  ng-click="addToCart(album.album_id)">
+				    	    <img ng-src="Images/bascet-album.png" alt="" ng-class="{ buy:album.buy }"  ng-click="addToCart(album)">
 				    	</div>
 			        </div>
 			    </div>
 	        </div>
 	    </div>
+
+	    <div infinite-scroll="loadMore()"  class="infinity" infinite-scroll-disabled='busy' infinite-scroll-distance='3'></div>
+
     </div>
 </main>
