--- a/app/Albums/_genre-albums.html
+++ b/app/Albums/_genre-albums.html
@@ -11,7 +11,7 @@
 				<p>{{ genreName }} ({{genreLength + " items"}})</p>
 			</div>
 			<div class="genre-albums" ng-repeat="album in albums track by $index">
-			    <a ui-sref="album.genre({genreName:genreName,id:album.album_id})"><img ng-src="Images/{{album.image_path}}" alt=""></a> 			
+			    <a ui-sref="album.genre({genreId:genreId,genreName:genreName,id:album.album_id})"><img ng-src="Images/{{album.image_path}}" alt=""></a> 			
 				<div class="info-manage-album">
 				    <p class="head-name">{{album.album_artist}} - {{album.album_name}}</p>
 					<p class="album-descriptoin">{{album.album_description | limitTo:100:0}}...</p>
