--- a/app/Albums/_genre-albums.html
+++ b/app/Albums/_genre-albums.html
@@ -15,11 +15,12 @@
 				<div class="info-manage-album">
 				    <p class="head-name">{{album.album_artist}} - {{album.album_name}}</p>
 					<p class="album-descriptoin">{{album.album_description | limitTo:100:0}}...</p>
-<!-- 					<span ng-class='{moreInfo:moreInfo}'>{{album.album_description | limitTo:500:101}}</span>
- -->
 					<p class="album-price">{{album.album_price | currency:"$"}}</p>
 			    	<div class="album-manage-icon">
-			    		<img ng-src="Images/info-album.png" alt="" ng-click="setImage(img)">
+			    		<p> 
+                            <img ng-src="Images/info-album.png" alt="info" ng-click="setInfo( album )" ng-class="{info:album.info}">
+                            <span class="info-content" ng-show="album.info" ng-bind="description" ></span>
+			    	    </p>
 			    	    <img ng-src="Images/bascet-album.png" alt=""  ng-click="addToCart(album.album_id)">
 			    	</div>
 			    	<p class="addtowishlist" ng-click="addtowishlist($index)">Add to Wishlist</p>
