--- a/index1.html
+++ b/index1.html
@@ -62,7 +62,6 @@
 	
 	<script src="app/BasketUpdateDirective.js"></script>
 
-
 	<script src="app/Search/SearchFactory.js"></script>
 	<script src="app/Search/SearchController.js"></script>
 
@@ -71,8 +70,6 @@
     <script src="app/User/UserSessionService.js"></script>
     <script src="app/User/UserController.js"></script>
     <script src="app/User/UserCompareDerective.js"></script>
-
-
 
 	<script src="app/Genre/GenreFactory.js"></script>
 	<script src="app/Genre/GenreDirective.js"></script>
@@ -84,10 +81,10 @@
     <script	src="app/Albums/AlbumsGenreController.js"></script>
     <script	src="app/Albums/AlbumsGenreFactory.js"></script>
 
-
 	<script src="app/Cart/CartFactory.js"></script>
 	<script src="app/Cart/CartDirective.js"></script>
 	<script src="app/Cart/CartController.js"></script>
+	<script src="app/Cart/WishListController.js"></script>
 
 </body>
 </html>
