--- a/index1.html
+++ b/index1.html
@@ -43,7 +43,9 @@
 	<div ui-view id="view-route" ></div>
 	<!-- <div id="view-route"><ng-view></ng-view></div> -->
 		
-<!-- <footer></footer> -->
+	 <footer>
+	 	<foo-page></foo-page>
+	 </footer>
 
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/lodash/lodash.js"></script>
@@ -61,6 +63,7 @@
 	<script src="app/Shared/Modules.js"></script>
 	
 	<script src="app/BasketUpdateDirective.js"></script>
+	<script src="app/FooterDirective.js"></script>
 
 	<script src="app/Search/SearchFactory.js"></script>
 	<script src="app/Search/SearchController.js"></script>
